# hopfield_embeded_llm

./: .gitignore  pyproject.toml
configs/: default.yaml
docs/: hopfield_networks.md  research_foundations.md  semantic_chunking.md  sentence_embeddings.md
scripts/: build_memory.py  evaluate.py  hallucination_test.py  inspect_retrieval.py  plot_training.py  sweep.py  train.py  train_dual.py  train_pooling_retriever.py  train_routed.py
src/embedding/: embedder.py
src/evaluation/: qa_metrics.py
src/ingestion/: base.py  chunker.py  pdf_source.py  registry.py  squad_source.py
src/model/: document_selector.py  dual_loss_hopfield.py  dual_loss_model.py  hierarchical_hopfield.py  hierarchical_model.py  hopfield_memory.py  hopfield_router.py  memory_injected_model.py  query_pinned_hopfield.py  query_pinned_model.py  routed_model.py  sparse_hopfield.py  sparse_injected_model.py
src/training/: metrics_logger.py  squad_dataset.py  trainer.py
src/utils/: logging.py  seeding.py
